Выполнила рефакторинг кода, разделив его по файлам и папкам сборки

--- a/copy-styles.css
+++ b/copy-styles.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -14,8 +14,8 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   transition: color 150ms var(--timing-function),
     background-color 150ms var(--timing-function);
-}
-
+} */
+/* 
 body.light-theme {
   background-color: #fff;
   color: #333333;
@@ -33,7 +33,7 @@ body.dark-theme {
 }
 
 /* THEME SWITCH */
-.theme-switch {
+/* .theme-switch {
   display: flex;
   align-items: center;
 }
@@ -107,9 +107,9 @@ body.dark-theme {
 .theme-switch__toggle:focus + .theme-switch__track,
 .theme-switch__toggle:active + .theme-switch__track {
   box-shadow: 0 0 0 3px #2196f3;
-}
+} */ */
 
-/* MENU */
+/* MENU
 
 .menu {
   padding: 0;
@@ -224,4 +224,4 @@ body.dark-theme {
 
 .button__icon {
   margin-right: 8px;
-}
+} */
