--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -3,6 +3,24 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
+:root {
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-transition: color 150ms var(--timing-function), background-color 150ms var(--timing-function);
+  transition: color 150ms var(--timing-function), background-color 150ms var(--timing-function);
+}
+
 /* MENU */
 .menu {
   padding: 0;
